--- a/20190806/index.html
+++ b/20190806/index.html
@@ -17,12 +17,12 @@
         <canvas id="universe"></canvas>
         <canvas id="canvas"></canvas>
 
-        <iframe src="audio/junxinwoxin.mp3" allow="autoplay" style="display:none" id="iframeAudio"></iframe>
-        <!--
+        <!--<iframe src="audio/junxinwoxin.mp3" allow="autoplay" style="display:none" id="iframeAudio"></iframe>-->
+        
         <audio autoplay loop>
         	<source src="audio/junxinwoxin.mp3" allow="autoplay" type="audio/mpeg">
         </audio>
-        -->
+        
 
 
         <div id="footer" class="">
