--- a/20190806/index.html
+++ b/20190806/index.html
@@ -17,9 +17,9 @@
         <canvas id="universe"></canvas>
         <canvas id="canvas"></canvas>
 
-        <!--<iframe src="audio/junxinwoxin.mp3" allow="autoplay" style="display:none" id="iframeAudio"></iframe>-->
+        <iframe src="audio/junxinwoxin.mp3" allow="autoplay" style="display:none" id="iframeAudio"></iframe>
         
-        <audio autoplay loop>
+        <audio loop>
         	<source src="audio/junxinwoxin.mp3" allow="autoplay" type="audio/mpeg">
         </audio>
         
