--- a/20190806/index.html
+++ b/20190806/index.html
@@ -19,7 +19,7 @@
 
         <!--<iframe src="audio/junxinwoxin.mp3" allow="autoplay" style="display:none" id="iframeAudio"></iframe>-->
         
-        <audio autoplay loop>
+        <audio loop>
         	<source src="audio/junxinwoxin.mp3" allow="autoplay" type="audio/mpeg">
         </audio>
         
