--- a/index.html
+++ b/index.html
@@ -1,1 +1,133 @@
-Hello World
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" 
+	"http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
+	<head>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+		<title>Xige Yang's homepage'</title>
+		<link rel="stylesheet" href="tutorial-styles.css" type="text/css" />
+		<link rel="home" href="index.html" title="Xige Yang's homepage" />
+	</head>
+	<body>
+		<div class="navheader">
+			<table summary="Navigation header" width="100%">
+				<tbody>
+					<tr>
+						<th align="center">Interplaying between nonlinear dynamics, cell biology, and more</th>
+					</tr>
+					<tr>
+						<td align="right"><a accesskey="n" href="Files/CaOsci.html">Go!</a></td>
+					</tr>
+				</tbody>
+			</table>
+			
+			<table width="800" border="0" align="center" cellpadding="0" cellspacing="0">
+			  <tr>
+				<td align="center">
+				<h3><a href="index.html">Home</a> || <a href="Files/CV.pdf">Curriculum Vitae</a> || <a href="teaching.html">Teaching</a> || <a href="../personal/personal.html">中文</a></h3></td>
+			  </tr>
+			  <tr>
+				<td align="left">&nbsp;</td>
+			  </tr>
+			</table>
+			
+			<hr />
+		</div>
+		<h1 class="title">
+			Home
+		</h1>
+		<h3 class="author">
+			<span class="firstname">Xige</span>
+			<span class="surname">Yang</span>
+		</h3>
+		<table cellspacing="0" cellpadding="0" width="93%">
+			<tbody>
+				<tr>
+					<td>
+						<p>605 Math Tower <br />
+						231 West 18th Avenue <br />
+						Columbus OH, 43210-1174<br />
+						<a class="department" href="https://math.osu.edu">Department of Mathematics </a><br />
+                            Email: <tt><a class="email" href="mailto:yang.2677@osu.edu">yang.2677@osu.edu</a></tt></p>
+					</td>
+					<td align="center">
+						<a href="Files/CaOsci.html"> <img class="candy" src="Files/Imgs/CalciumOs/beta1.gif" alt="Calcium Oscillation"  style="width:240px;height:180px;"/> </a>
+						<a href="Files/Lorenz.html"> <img class="candy" src="Experiments/Java/lorenz/Img/lorenz.gif" alt="Lorenz System"  style="width:240px;height:180px;" /> </a>
+						<a href="Files/LSystem.html"> <img class="candy" src="Experiments/Python/ComputationalBotany/lSystems/Imgs/appleTree.gif" alt="L-System Tree"  style="width:240px;height:180px;" /> </a>
+					</td>
+				</tr>
+			</tbody>
+		</table>
+		<br />
+		
+		<table cellspacing="0" cellpadding="0" width="90%">
+			<tbody>
+				<tr>
+					<td>
+						<p><b>Some of my favorite links: </b><br />
+						<a href="https://terrytao.wordpress.com">Terry Tao's Blog</a> <br />
+						<a href="https://physicalprinciples.wordpress.com">Tian Ma and Shouhong Wang's Blog</a> <br />
+						<a href="https://sinews.siam.org/?_ga=2.231657815.939809661.1509735601-1963780583.1503609500">SIAM's blog </a><br />
+                        <a href="http://physicsbuzz.physicscentral.com">APS's blog</a> <br/>
+                        <a href="https://github.com/jupyter/jupyter/wiki/A-gallery-of-interesting-Jupyter-Notebooks">Jupyter Notebook Gallery</a>
+                        </p>
+					</td>
+					<td align="center">
+						<a> <img class="candy" src="Files/Imgs/Botany/fernAnim.gif" alt="Fern Formation"  style="width:240px;height:180px;"/> </a>
+						<a> <img class="candy" src="Files/Imgs/Turing/TurningAni.gif" alt="Turing's Pattern"  style="width:240px;height:180px;" /> </a>
+						<a> <img class="candy" src="Files/Imgs/Enzyme/anim.gif" alt="Enzyme Dynamics"  style="width:240px;height:180px;" /> </a>
+					</td>
+				</tr>
+			</tbody>
+		</table>
+		
+		<hr />
+		<p class="title"><b>Introduction</b></p>
+		<p>
+		Dynamic system is a mathematical branch studying complex behavior of the nature, and it's attracting more and more attentions nowadays. All above animation gifs are examples of (continuous or discrete) dynamic system.
+		Click the above animations to see the details</p>
+		
+		<p>
+		Below are some small computer experiments I've done.
+		</p>
+
+		<hr />
+		<p class="title"><b>Research Gallery</b></p>
+		<div class="toc">
+			<dl>
+				<dt>1. Continuous Dynamical Systems -- from differential equation point of view 
+					<br />
+					<dd> 1.1 <a href="Files/CaOsci.html">Calcium oscillation</a></dd>
+					<dd> 1.2 <a href="Files/Lorenz.html">Lorenz attractor</a></dd>
+					<dd> 1.3 A taste on nonlinear reaction diffusion equations (upcoming soon!) </dd>
+					<br />
+				</dt>
+
+				<dt>2. Discrete Dynamical Systems -- from a computational botany point of view <br />
+					<dd>-- <i> An in-depth and beautiful reference: <a href="http://algorithmicbotany.org"> Algorithmic Botany Homepage </a> </i>
+					<br />
+					<dd> 2.1 <a href="Files/LSystem.html">L system</a></dd>
+					<dd> 2.2 Fibonacci number and phyllotaxis (upcoming soon!) </dd>
+					<dd> 2.3 Iterative function system (upcoming soon!)</dd>
+					<br />
+				</dt>
+
+				<dt>3. Algorithms
+					<br />
+						<dd> 3.1 <a href="Experiments/Delaunay/delaunay.html">Delaunay triangulation of a circle</a></dt>
+						<dd> 3.2 <a href="Files/cellSimulator.html">Cell configuration simulator</a></dt>
+						<dd> 3.3 A comparison among finite difference, finite element, finite volume and spectral methods</dt>
+					<br />
+				</dt>
+			</dl>
+		</div>
+		
+		<hr />
+		<p class="title"><b>Miscellaneous</b></p>
+				<div class="toc">
+			<dl>
+				<dt> <a href="Files/Mota/game.html"> A small online javascript game built by me </a></dt>
+			</dl>
+		</div>
+
+	</body>
+</html>
